--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <title> Shiva | Quote Generator </title>
 </head>
 <body>
     <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="logo.png" alt="">
+                    <img src="logo.png.jpg" alt="">
                 </span>
 
                 <div class="text logo-text">
