--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title> Shiva | Quote Generator </title>
 </head>
@@ -8,7 +9,7 @@
     <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="logo.png.jpg" alt="">
+                    <img src="logo.png" alt="logo">
                 </span>
 
                 <div class="text logo-text">
