--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" type="image/png" href="logo.png">
+  <meta name="description" content="This is a Quote Generator that generates random quotes. Created by Shiva.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Shiva | Quote Generator </title>
 </head>
 <body>
