--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <title> Shiva | Quote Generator </title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="icon" type="image/png" href="logo.png">
-  <meta name="description" content="This is a Quote Generator that generates random quotes. Created by Shiva.">
+  <meta name="description" content="Generate Inspiring and Thought-Provoking Quotes with Quote Generator. Explore a collection of random quotes to spark your creativity, motivation, and wisdom. Created by Shiva.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Shiva | Quote Generator </title>
+  <meta property="og:title" content="Shiva | Quote Generator">
+  <meta property="og:description" content="Generate Inspiring and Thought-Provoking Quotes with Quote Generator. Explore a collection of random quotes to spark your creativity, motivation, and wisdom. Created by Shiva.">
+  <meta property="og:image" content="logo.png">
+  <meta property="og:url" content="https://thebrainliestuser.github.io/QuoteGenerator/">
 </head>
 <body>
     <header>
