--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
             <div class="image-text">
                 <span class="image">
-                    <img src="logo.png" alt="logo">
+                    <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg=="> <img src="logo.png" alt="logo"> </a>
                 </span>
 
                 <div class="text logo-text">
@@ -27,9 +27,9 @@
 
         </header>
   <button id="quoteButton" onclick="generateQuote()">Generate Quote</button>
-  <div id="quoteContainer">
+  <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg=="> <div id="quoteContainer"> 
     <p id="quoteText"></p>
-  </div>
+  </div> </a>
 
   <script src="script.js"></script>
 </body>
