--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </div>
 
         </header>
-  <button id="quoteButton" onclick="generateQuote()">Generate Quote</button>
+   <button id="hindiButton" onclick="generateHindi()">Hindi Quote</button>
+   <button id="quoteButton" onclick="generateQuote()">Generate Quote</button>
   <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg=="> <div id="quoteContainer"> 
     <p id="quoteText"></p>
   </div> </a>
