--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             </div>
 
         </header>
-   <button id="hindiButton" onclick="generateHindi()">Hindi Quote</button>
-   <button id="quoteButton" onclick="generateQuote()">Generate Quote</button>
-  <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg=="> <div id="quoteContainer"> 
+   <div class="button-container">
+        <button id="hindiButton" onclick="generateHindi()">Hindi Quote</button>
+        <button id="quoteButton" onclick="generateQuote()">Generate Quote</button>
+   </div>
+    <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg=="> <div id="quoteContainer"> 
     <p id="quoteText"></p>
   </div> </a>
 
