--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
             <div class="image-text">
                 <span class="image">
-                    <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg=="> <img src="logo.png" alt="logo"> </a>
+                    <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg==" target="_blank"> <img src="logo.png" alt="logo"> </a>
                 </span>
 
                 <div class="text logo-text">
@@ -30,7 +30,7 @@
         <button id="hindiButton" onclick="generateHindi()">Hindi Quote</button>
         <button id="quoteButton" onclick="generateQuote()">Generate Quote</button>
    </div>
-    <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg=="> <div id="quoteContainer"> 
+    <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg==" target="_blank"> <div id="quoteContainer"> 
     <p id="quoteText"></p>
   </div> </a>
 
