--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
                 <div class="text logo-text">
                     <span class="name">Shiva</span>
-                    <span class="profession">TheBrainliestUser</span>
+                    <span class="profession">Programmer</span>
                 </div>
             </div>
 
         </header>
    <div class="button-container">
         <button id="hindiButton" onclick="generateHindi()">Hindi Quote</button>
-        <button id="quoteButton" onclick="generateQuote()">Generate Quote</button>
+        <button id="quoteButton" onclick="generateQuote()">English Quote</button>
    </div>
     <a href="https://instagram.com/shivamsinghamrajput?igshid=MzNlNGNkZWQ4Mg==" target="_blank"> <div id="quoteContainer"> 
     <p id="quoteText"></p>
