--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Shiva | Quote Generator">
   <meta property="og:description" content="Generate Inspiring and Thought-Provoking Quotes with Quote Generator. Explore a collection of random quotes to spark your creativity, motivation, and wisdom. Created by Shiva.">
-  <meta property="og:image" content="logo.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/TheBrainliestUser/QuoteGenerator/main/logo.png">
   <meta property="og:url" content="https://thebrainliestuser.github.io/QuoteGenerator/">
 </head>
 <body>
